<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    tools:context=".SplashActivity"
    >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLogo"
        android:src="@drawable/logo"
        android:layout_marginTop="155dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="55dp"
        android:layout_height="1dp"
        android:id="@+id/topDivider"
        android:src="#000000"
        android:alpha=".08"
        android:gravity="center"
        android:layout_marginTop="41dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgLogo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:orientation="vertical"
        android:id="@+id/layout1"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="42dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Headline"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/benton_sans_book"
            android:textSize="16sp"
            android:singleLine="false"
            android:textColor="#acacac"
            android:gravity="center"
            android:maxLines="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:letterSpacing=".05"
            android:lineSpacingExtra="12.5dp"
            />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:text="Get Started"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@string/benton_sans_book"
                android:background="@drawable/register_btn_selector"
                android:textColor="#ffffff"
                android:layout_marginTop="38dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:letterSpacing=".05"

                />


            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Policy"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@string/benton_sans_book"
                android:textSize="10sp"
                android:singleLine="false"
                android:textColor="#acacac"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:maxLines="2"
                android:lineSpacingExtra="5dp"
                android:letterSpacing=".05"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout2"
    android:layout_below="@+id/layout1"
    android:layout_marginTop="35dp"
    android:layout_alignParentBottom="true"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/bottomDivider"
        android:src="#000000"
        android:layout_alignParentTop="true"
        android:alpha=".08">

    </ImageView>

    <!-- LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:id="@+id/layout5"
        >



    </LinearLayout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/layout4"
        >
        <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Have_Acctount"
        android:textAlignment="center"
        android:fontFamily="@string/benton_sans_book"
        android:textSize="16sp"
        android:singleLine="false"
        android:textColor="#acacac"
            android:layout_gravity="center"
            android:letterSpacing=".05"
            />
    <TextView
        android:id="@+id/signinTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:textAlignment="center"
        android:paddingLeft="5dp"
        android:fontFamily="@string/benton_sans_book"
        android:textSize="16sp"
        android:singleLine="false"
        android:layout_gravity="center"
        android:textColor="@color/new_btn_color"
        android:letterSpacing=".05"

         />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>