<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">
    <!--<View-->
        <!--android:id="@+id/statusBarView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="25dp"-->
        <!--android:background="@color/statusbar_color"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:visibility="visible"-->
        <!--/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/REG_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_header"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/positve_btn"
            android:letterSpacing=".05"
            android:visibility="gone"
            android:id="@+id/loginHeaderText"
             />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/photoUpload_Layout"
    android:orientation="vertical"
    android:layout_below="@+id/REG_back">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/getStartedText"
        android:textSize="13sp"
        android:textColor="@color/friend_req_color"
        android:letterSpacing=".05"
        android:layout_marginTop="12dp"
        android:text="@string/Let_get_started"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ps"
        android:textSize="11sp"
        android:textColor="@color/friend_req_color"
        android:layout_marginTop="7dp"
        android:letterSpacing=".05"
        android:id="@+id/psText" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <com.held.customview.CircularImageView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/customRing"
            android:layout_alignBaseline="@+id/profile_pic" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="81dp"
            android:id="@+id/profile_pic"
            app:border_width="5dp"
            app:border_color="@color/friend_req_color"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="81dp"
            android:src="@drawable/addimage"
            android:scaleType="center"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/addimageIcon"
            android:layout_alignBaseline="@+id/profile_pic" />


    </RelativeLayout>

</LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_layout"
            android:gravity="center"
            android:background="@color/bg_color"
            android:layout_marginTop="30dp"
            android:layout_below="@id/photoUpload_Layout"
            android:layout_centerInParent="true">
            <EditText
                android:id="@+id/REG_user_name_edt"
                android:layout_width="285dp"
                android:layout_height="45dp"
                android:hint="@string/user_name_hint"
                android:maxLength="16"
                android:textColor="#000000"
                android:textColorHint="#acacac"
                android:textSize="13sp"
                android:background="@layout/text_border"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:letterSpacing=".05"
                android:paddingLeft="5dp"

                android:fontFamily="@string/benton_sans_book"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/phone_no_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="92dp"
                    android:layout_height="45dp"
                    android:id="@+id/REG_country_code_edt"
                    android:background="@layout/text_border"
                    android:layout_weight="2"
                    android:padding="5dp"

                    />

                <EditText
                    android:id="@+id/REG_mobile_no_edt"
                    android:layout_width="189dp"
                    android:layout_height="45dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/phone_hint"
                    android:inputType="number"
                    android:maxLength="10"
                    android:layout_marginLeft="4dp"
                    android:textColor="#000000"
                    android:textColorHint="#acacac"
                    android:textSize="13sp"
                    android:background="@layout/text_border"
                    android:textAlignment="center"
                    android:letterSpacing=".05"
                    android:fontFamily="@string/benton_sans_book"
                    android:gravity="center" />

            </LinearLayout>

            <Button
                android:id="@+id/REG_register_btn"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/register_btn_selector"
                android:gravity="center"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:letterSpacing=".05"
                android:fontFamily="@string/benton_sans_book"
                />

            <TextView
                android:id="@+id/SPLASH_terms_condition_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#acacac"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Policy"
                android:letterSpacing=".05"
                android:textSize="10sp"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                android:fontFamily="@string/benton_sans_book"
                android:background="@color/bg_color" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>